--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-bfq-git
 pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _kernelname=-bfq-git
 _srcname=linux-stable-rc
-pkgver=4.8.4.r0.ga2b4234
+pkgver=4.8.6.r0.g5d506f2133aa
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://algo.ing.unimo.it"
@@ -73,7 +73,9 @@ source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
         "http://repo-ck.com/source/gcc_patch/${_gcc_patch}.gz"
         'linux-bfq-git.preset'
         'change-default-console-loglevel.patch'
-        'config' 'config.x86_64')
+        'config' 'config.x86_64'
+        '0005-BFQ-Fix.patch'
+        '0006-BFQ-Fix.patch')
 
         
 pkgver() {
@@ -93,7 +95,7 @@ prepare() {
         
     ### Patch source with BFQ
         msg "Patching source with BFQ patches"
-        for p in "${srcdir}"/000{1,2,3,4}-*BFQ*.patch; do
+        for p in "${srcdir}"/000{1,2,3,4,5,6}-*BFQ*.patch; do
         msg " $p"
         patch -Np1 -i "$p"
         done
@@ -452,4 +454,6 @@ sha512sums=('SKIP'
             '0e995f9a386a15357f2c5d2a8cde4342f0965cc8a7976ef0c7bacd8865bc0f5070b9fabdf2557a98e7e377df0c31755732e838d1c725ebf09a671570ab005e04'
             'd9d28e02e964704ea96645a5107f8b65cae5f4fb4f537e224e5e3d087fd296cb770c29ac76e0ce95d173bc420ea87fb8f187d616672a60a0cae618b0ef15b8c8'
             '9842784a4dd021db993712456d5229b8d27dc62c63d09e8e2330e2c4496223cbeef9abfae81301f894765a1bd11b03ebba912c45b9b5fc1f08f3750bf39081ee'
-            '443d442c78e5039ce05ce9717b282029f4c6c1c95ec3858ca2811d4040cf736b6852ceffd9f1f85f5727b459cc53057eea3a90dd0717b8806d0786324b6f100b')
+            '443d442c78e5039ce05ce9717b282029f4c6c1c95ec3858ca2811d4040cf736b6852ceffd9f1f85f5727b459cc53057eea3a90dd0717b8806d0786324b6f100b'
+            '3889679e288d51f6fecc7ed6581ccde34acbf1e4861f5c9ca237a1ad13158502757d3fc457d7b6caf1c8c99c9dba842265004154a71cffb8ec14e1030e49e312'
+            '3c3f3b6407d9a1a63cd91c2b5c35e6c932afa5bf33f1b2e8a530dbd9eacda8c8f956616c4cc9228657624da58e354ba5714252237d84ff3386fd65cf44f06ddc')
