--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -51,7 +51,7 @@ _use_current=
 pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.10.2.r76.g43100e143367
+pkgver=4.10.3.r44.gfc2ff65a01c2
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://algo.ing.unimo.it"
