--- a/stable/linux-bfq-git/PKGBUILD
+++ b/stable/linux-bfq-git/PKGBUILD
@@ -51,8 +51,8 @@ _use_current=
 pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _srcname=linux-stable
-pkgver=4.10.13.r0.gb957be36d793
-pkgrel=2
+pkgver=4.11.2.r0.g02d868373529
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://algo.ing.unimo.it"
 license=('GPL2')
@@ -60,15 +60,15 @@ options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'git')
 _bfqrel=v7r11
 _bfqver=v8r11
-_bfqpath="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/4.10.0-${_bfqver}"
-#_bfqpath="https://pf.natalenko.name/mirrors/bfq/4.10.0-${_bfqver}"
+_bfqpath="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/4.11.0-${_bfqver}"
+#_bfqpath="https://pf.natalenko.name/mirrors/bfq/4.11.0-${_bfqver}"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v3.15+.patch"
 
-source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git#branch=linux-4.10.y'
-        "${_bfqpath}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${_bfqrel}-4.10..patch"
-        "${_bfqpath}/0002-block-introduce-the-BFQ-${_bfqrel}-I-O-sched-for-4.10.0.patch"
+source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git#branch=linux-4.11.y'
+         "${_bfqpath}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${_bfqrel}-4.11..patch"
+        "${_bfqpath}/0002-block-introduce-the-BFQ-${_bfqrel}-I-O-sched-for-4.11.0.patch"
         "${_bfqpath}/0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-${_bfqrel}-for.patch"
-        "${_bfqpath}/0004-Turn-BFQ-${_bfqrel}-for-4.10.0-into-BFQ-${_bfqver}-for-4.10.0.patch"
+        "${_bfqpath}/0004-blk-bfq-turn-BFQ-${_bfqrel}-for-4.11.0-into-BFQ-${_bfqver}-for.patch"
         "http://repo-ck.com/source/gcc_patch/${_gcc_patch}.gz"
          # the main kernel config files
         'config.i686' 'config.x86_64'
@@ -424,13 +424,13 @@ for _p in ${pkgname[@]}; do
 done
 
 sha512sums=('SKIP'
-            '03f4d45c0b3ac20baea9eaa92591e1749499e084cbca104f55a3ec4cfeda0e6c7fe6766b0eea0bb5bb4cf7f2371992e7a6002aaec09a08386fe2431c9cf0a3a8'
-            'c4161e2ff79647b8e8212681c0294b6f160c135728f48adfe61b1089d6242f925584afe4d2ebf0ef9cb650ae45c057d5c7119ce0264d3aeda008bb359b2b2582'
-            '3147c29a542342eb2b60c4247edbffce0a35356e3b67a5471ed0e7555d3b9ec1b985e1090dc0b646bab129306962d094d7632e82b72fdbec3582b7461818e664'
-            'ca1b3bcc36e4c61206f4c6fbfbda12eff5996353a3f0f82e972046cec35ff953abb1941ba7ee554db5e012cb61d981f7605b0cbbaad8c09ea9950fa9a3321773'
+            'c811d43f4e03c725ac03707f8f662f85670d1083db61c23104777c2998d9cf4d557b68b18b38e550ef5e3a06f2179ed960476fa7d3f09cb804ebb99d6e478e76'
+            'e79d8d3302eb675e6becb21463b72e4fd11a0bae4bafc6f7eb963459b594a17be0fe20df76af846c763939ce5ede40f7cd2e536af5b8e77d3015925d797dcaec'
+            'be1b94ac52ed519243aa1889bd392dd1e68ec0a2fdae4bf5d2c9fa62a33cad94f1ff6db26e66cd4de60a4e07ab7d2cbad6b3f9a625ddeb909702f5bf39a2368a'
+            'cd82bce44c7d5a8148e69ae8bab3ea10df1b65bb97a6494c0c0ffe0e5b6f7e6eb08d8c2c3597e31e3d88ba908d36ab749fc97aaccf51857bbd29a697395789c9'
             '77d80d50d8c4323ed36fd2097ba9f6b49bb8d7cae59d32ffa76b309758a7e9f972d26fedd77046d88ce2691bb01a07909f8bdc34ba214414be3bc030ee31994d'
-            'bd900391ba630b17534277da3e979208c7f46ca60d100b16d322b268f79edcfcf7a635c08b8b214a7eac4342314dd2bcaa7b5abc5d41c7c37843a0b46ea818e4'
-            '6a95a8b3e55e886131e75e17787ad245356f75562b9bf03e35a8b1ff1fbe6d9491e7bb53029bb61047187b5aa8a9bb2c5072298a1760a9f39f3567de3abba138'
+            'cde29c4250c8d7c8753ae81bf3f566f65cd9b19aa033bd8537b83de27dc3fda0b7dae66b74196d316518a0a98921ff45682fb4afb156769c56b7a3d9b846c9d9'
+            'b7b0289b773eed89f10d3933a2434cbb1f58618215e89b6826329081efae06988c15d7723f9feef8df66f793036be59baa1d358b1c21cb099ad4e1054bf6287e'
             'd6faa67f3ef40052152254ae43fee031365d0b1524aa0718b659eb75afc21a3f79ea8d62d66ea311a800109bed545bc8f79e8752319cd378eef2cbd3a09aba22'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf')
             
