--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -88,7 +88,7 @@ _kernelname=${pkgbase#linux}
 pkgver() {
   cd "${_srcname}"
 
-  git describe --long | sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g;s/\.rc/rc/'
+  git describe --long --tags | sed 's/^v//;s/-/./g'
 } 
 
 prepare() {
