--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -51,7 +51,7 @@ _1k_HZ_ticks=
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.16.2.69.g8485fd17d21b
+pkgver=4.16.3.197.g5befb1483fc7
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -82,8 +82,7 @@ source=('git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
         '0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch'
         '0003-Partially-revert-swiotlb-remove-various-exports.patch'
         '0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch'
-        '0005-Revert-drm-amd-display-disable-CRTCs-with-NULL-FB-on.patch'
-        '0006-net-aquantia-Regression-on-reset-with-1.x-firmware.patch')
+        '0005-net-aquantia-Regression-on-reset-with-1.x-firmware.patch')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-uksm-git} 
@@ -112,14 +111,10 @@ prepare() {
     ### Fix https://bugs.archlinux.org/task/58153
         msg "Fix #58153"
         patch -Np1 -i ../0004-Fix-vboxguest-on-guests-with-more-than-4G-RAM.patch
-    
-    ### Fix https://bugs.archlinux.org/task/58158
-        msg "Fix #58158"
-        patch -Np1 -i ../0005-Revert-drm-amd-display-disable-CRTCs-with-NULL-FB-on.patch
 
     ### Fix https://bugs.archlinux.org/task/58174
         msg "Fix #58174"
-        patch -Np1 -i ../0006-net-aquantia-Regression-on-reset-with-1.x-firmware.patch
+        patch -Np1 -i ../0005-net-aquantia-Regression-on-reset-with-1.x-firmware.patch
     
     ### Patch source with UKSM
         msg "Patching source with UKSM"
@@ -389,9 +384,8 @@ sha512sums=('SKIP'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            '66404910e458f18ab67143a1ba41a89028fba9669995e85ec8d8c690ce718d861cbeaa45295738ab4ae03abe6e4941270586f07c2ae2a04d0def19856d15e48a'
-            '23f03a8c1a679bd6b81d7a5c4036a4201084f214abad24c24e28f5f888b7e60743340033fba01960c82cae0806fe2707596fe5e444d83a58629dafaaf73e572a'
-            'c324687fc9c60ca24ebce331d9a285d3ccb83cd72d36b0b5c6ef503d17cce2955673de2f065c8937c54e9a985a5e1443343e920c44932fb144ab12eb09b00b42'
-            '9ff7e643569a6aa0a1ca092de534860e7bfc4fcec7ee8cb36c5f26a719465af7f7b780d2cec12184332bc6fa2c0b56b182d67646747d48bc5e4e2eb58ee5bb55'
-            'ca5a56235fa06c26154532c96f2d535ee5000050ee85253b94d39eee28b6cf7d5cdbffc20db2c8e869dc592321fd7f262f1d250e9f90053e0ad52d76a6b42238'
-            'b82360552a235a64bc68245361f0758bd4c1c6815050814f9ea28f2d7d28f57aa2b8697b5f5ee8af31e9bf13053b371cff395a2c71e334e8c0b10a7364a8831e')
+            'cfcf6cb510b145039075442f397b9526c103334f8728cae1fb70395dabed3ff0105ce9da7412f98a744e62ec2cae8aa8406b39d9f9ea6d8c0a04bd6c78605885'
+            'ca10d5457633a5504b09007a299114b32fd2f84aeb2381138ea5ecaf9c3da76b84efce63f9e23ea7b9b70ae7c05c7c29756c5a95abf599155fff73b24926d5ed'
+            'b12a068e3158b5281ea6f471a4065fb9fb1e51d4b8c17d0bbf6556c2afcf257d0905948b336f72752717c136aa26ca88e3a81abd318b5e48a085bd050ea89ba3'
+            '7a1c931269f3e801496dd8dad049b65fb28212d90179640b8ac0d7f380e0f1378dc8f43624893f200e99678793300d331701fad3826b059c9336f7b16ef8a521'
+            '23ea6d086bc0a483c08b28d8a64a47636024322d38a17bb5994df4cd25cbd1d29be39a7ed0d8c2305409efdb455c5b5f3fd9d72ca10d3c13df66185a5d089a8c')
