--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.18
 _srcname=linux-stable-rc
-pkgver=4.18.5.44.gabf395729dbf
+pkgver=4.18.5.47.g1591cfef35b2
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
