--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.18
 _srcname=linux
-pkgver=4.18.10.0.g183348489d36
+pkgver=4.18.12.0.g7da07a3216a0
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -200,7 +200,7 @@ build() {
 }
 
 _package() {
-    pkgdesc='Linux Kernel and modules with the  UKSM.'
+    pkgdesc="The ${pkgbase/linux/Linux} kernel and modules with the UKSM"
     depends=('coreutils' 'linux-firmware' 'mkinitcpio>=0.7')
     optdepends=('crda: to set the correct wireless channels of your country' 'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
     backup=("etc/mkinitcpio.d/$pkgbase.preset")
@@ -257,7 +257,7 @@ _package() {
 
 
 _package-headers() {
-    pkgdesc='Header files and scripts to build modules for linux-uksm'
+    pkgdesc="Header files and scripts for building modules for ${pkgbase/linux/Linux} kernel"
     depends=('linux-uksm')
 
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
@@ -340,7 +340,7 @@ _package-headers() {
 
 
 _package-docs() {
-    pkgdesc='Kernel hackers manual - HTML documentation that comes with the linux-uksm.'
+    pkgdesc="Kernel hackers manual - HTML documentation that comes with the ${pkgbase/linux/Linux} kernel"
     depends=('linux-uksm')
   
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
