--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.19
 _srcname=linux-stable-rc
-pkgver=4.19.2.r0.g7950eb316adf
+pkgver=4.19.2.r46.g714361ce825f
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -94,13 +94,9 @@ pkgver() {
 prepare() {
     cd ${_srcname}
     
-    ### Fix naming schema in EXTRAVERSION
-        _rc="$(cat Makefile | grep -m1 -e EXTRAVERSION | grep -o "[[:digit:]]*")"
-        msg2 "Fix naming schema in EXTRAVERSION"
-        sed -i -e "s|EXTRAVERSION = -rc${_rc}|EXTRAVERSION =|g" Makefile
-    
     ### Setting version
         msg2 "Setting version..."
+        sed -e "/^EXTRAVERSION =/s/=.*/=/" -i Makefile
         scripts/setlocalversion --save-scmversion
         echo "-$pkgrel" > localversion.10-pkgrel
         echo "$_kernelname" > localversion.20-pkgname
