--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.0
 _srcname=linux
-pkgver=5.0.13.r0.ge5b9547b1aa3
+pkgver=5.0.18.r0.g8614793dbb41
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -264,7 +264,7 @@ _package() {
 
 _package-headers() {
     pkgdesc="Header files and scripts for building modules for ${pkgbase/linux/Linux} kernel"
-    depends=('linux-uksm')
+    depends=('linux-uksm-git')
 
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
@@ -347,7 +347,7 @@ _package-headers() {
 
 _package-docs() {
     pkgdesc="Kernel hackers manual - HTML documentation that comes with the ${pkgbase/linux/Linux} kernel"
-    depends=('linux-uksm')
+    depends=('linux-uksm-git')
 
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
