--- a/stable/linux-aufs-git/PKGBUILD
+++ b/stable/linux-aufs-git/PKGBUILD
@@ -55,7 +55,7 @@ _srcname=linux
 pkgver=5.2.r0.g0ecfebd2b524
 pkgrel=2
 arch=('x86_64')
-url="https://github.com/sfjro/aufs5-linux"
+url="https://github.com/sfjro/aufs5-standalone"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
