--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -55,7 +55,7 @@ _srcname=linux-stable-rc
 pkgver=5.2.r62.g61731e8fe278
 pkgrel=2
 arch=('x86_64')
-url="https://github.com/sfjro/aufs5-linux"
+url="https://github.com/sfjro/aufs5-standalone"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
